--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
     "description": "Assignment 2 for backend engineering launchpad",
     "main": "index.js",
     "scripts": {
-      "pretest": "node -e \"if (process.version.slice(1).split('.')[0] < 18) { console.error('Unsupported Node.js version, please use version 18'); process.exit(1); }\"",
-      "test": "tap test/*.js --disable-coverage"
+        "pretest": "node -e \"if (process.version.slice(1).split('.')[0] < 18) { console.error('Unsupported Node.js version, please use version 18'); process.exit(1); }\"",
+        "test": "tap test/*.js --disable-coverage"
     },
     "author": "Airtribe",
     "license": "ISC",
     "devDependencies": {
-      "supertest": "^6.3.4",
-      "tap": "^18.6.1"
+        "nodemon": "^3.1.11",
+        "supertest": "^6.3.4",
+        "tap": "^18.6.1"
     },
     "dependencies": {
-      "express": "^4.18.2"
+        "axios": "^1.13.2",
+        "bcrypt": "^6.0.0",
+        "dotenv": "^17.2.3",
+        "express": "^4.22.1",
+        "jsonwebtoken": "^9.0.3",
+        "mongoose": "^8.21.0",
+        "node-cache": "^5.1.2"
     },
     "engines": {
-      "node": ">= 18.0.0"
+        "node": ">= 18.0.0"
     }
 }
